environments/dev/security_groups.tf
resource "aws_security_group" "ttomczyk_ec2_security_group" {
  vpc_id      = module.network.vpc_id

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.infra_env}_ttomczyk_ec2_security_group"
  }
}

resource "aws_security_group" "ttomczyk_rds_security_group_1" {
  vpc_id      = module.network.vpc_id

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.infra_env}_ttomczyk_rds_security_group_1"
  }
}

resource "aws_security_group" "ttomczyk_rds_security_group_2" {
  vpc_id      = module.network.vpc_id

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.infra_env}_ttomczyk_rds_security_group_2"
  }
}
